syntax = "proto3";

package com.at.t.ecommerce.inventory.grpc;

option java_multiple_files = true;
option java_package = "com.at.t.ecommerce.inventory.grpc.generated";
option java_outer_classname = "InventoryProto";

service StockService {
  rpc ReserveStock (ReserveStockRequest) returns (StockResponse);
  rpc GetStockAvailability (GetStockRequest) returns (StockResponse);
}

message ReserveStockRequest {
  string product_id = 1;
  string warehouse_id = 2; 
  int64 quantity = 3;
  string owner_id = 4;
  string unit_of_measure = 5; // ✅ ADDED: Matches your Domain "UnitOfMeasure" enum
}

message GetStockRequest {
  string product_id = 1;
  string warehouse_id = 2;
}

message StockResponse {
  bool success = 1;
  string message = 2;
  int64 current_available_quantity = 3;
  string stock_id = 4;
  string timestamp = 5; // ✅ ADDED: Useful for clients to know how "fresh" the data is
}